# anki-connect-dict

./: Cargo.toml  README.md
src/: main.rs  query_browse_cards.rs  word_frequency.rs
