[package]
name = "anki-dict-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
notify = "4.0.17"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
